# ufeed

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml
frontend/: App.vue  Feed.vue  FeedItem.vue  StatusBar.vue  package.json
migrations/2018-11-04-142510_posts/: up.sql
migrations/2018-11-20-000544_create_users/: up.sql
migrations/2018-11-20-001107_add_user_foreign_key_to_posts/: down.sql  up.sql
src/: auth.rs  main.rs  models.rs  posts.rs  router.rs  routes.rs  schema.rs
